# DTSDataViewer

./: README.md  setup.cfg
DTSDataViewer/: dtsdataviewer.py  experiment.py  plotarea.py
