[metadata]
name = DTSDataViewer
version = 2.1.0
author = josef ling
author_email = jling@mrn.org
description = A data viewer for the DTS Sliceware data files.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

zip_safe = True
include_package_data = True
install_requires =
    numpy
    PyQt5
    matplotlib
    dts_file_reader

[options.entry_points]
console_scripts =
    dtsdataviewer = DTSDataViewer.dtsdataviewer:main

[options]
package_dir =
    = .
packages = find:

[options.packages.find]
where = .
exclude =
    DTSDataViewer.venv
    DTSDataViewer/venv
    venv*
    bin*

[options.package_data]
DTSDataViewer =
    rc/*.png
